[package]
name = "airqg"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1.19.0"